--- a/why.html
+++ b/why.html
@@ -10,13 +10,19 @@
     </head>
     <body>
         <header>
-            <img src="images/dog3.jpg" alt="A light brown grumpy pug laying on the dark brown floor." width="200px">
+            <img src="images/dog3.jpg" alt="A light brown grumpy pug laying on the dark brown floor." width="250px">
+            <h1>Dog Gone Awesome</h1>
+            <ul>
+                <li><a class="makeSkyBlue" href="https://en.wikipedia.org/wiki/Snoopy" target="_blank">Snoopy</a></li>
+                <li><a class="makeSkyBlue" href="https://en.wikipedia.org/wiki/Toto_(Oz)" target="_blank">Toto</a></li>
+                <li><a class="makeSkyBlue" href="https://seuss.fandom.com/wiki/Max" target="_blank">Max</a></li>
+            </ul>
         </header>
         <h2>Why I prefer dogs over cats</h2>
         <p>Dogs are better than cats because I have 2 dogs, and from experience, I&#39;ve had a better connection with dogs. Dogs are so kind, sweet, and a great emotional companion. Cats are great too, but I prefer dogs because my two french bulldogs have been the greatest gift I could ask for.</p>
         <img src="images/dog2.jpg" alt="A french bulldog dog with a green harness sticking their tongue out. The dog is on a green patch of grass surrounded by a blurred out background.">
         <br>
-        Photo by <a href="https://unsplash.com/@nites12?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">NICOLAS TESSARI</a> on <a href="https://unsplash.com/photos/selective-focus-photography-of-adult-fawn-pug-BHh-jKrTIoU?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        Photo by <a href="https://unsplash.com/@nites12?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">NICOLAS TESSARI</a> on <a href="https://unsplash.com/photos/selective-focus-photography-of-adult-fawn-pug-BHh-jKrTIoU?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
         <h2>Adorable Video about Dogs</h2>
         <footer><a href="index.html">Back to Index</a></footer>
     </body>
